--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>The Jilliverse</title>
+    </head>
+    <body>
+        <h1>Work In Progress!</h1>
+        <img src="./20200326_113014.jpeg"
+    </body>
+</html>
+
