--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>The Jilliverse</title>
+        <link href="./style.css" type="text/css" rel="stylesheet">
     </head>
     <body>
         <h1>Work In Progress!</h1>
-        <img src="./20200326_113014.jpeg"
+        <img src="./20200326_113014.jpeg">
     </body>
 </html>
 
