--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>The Jilliverse</title>
         <link href="./style.css" type="text/css" rel="stylesheet">
+        <script src="./script.js"></script>
     </head>
     <body>
         <h1>Work In Progress!</h1>
